// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component MenuDrawer should render empty drawer 1`] = `
<body>
  <div />
</body>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-modal MuiModal-root css-fgtof9-MuiModal-root-MuiDrawer-root"
    id="menudrawer"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorLeft css-4t3x6l-MuiPaper-root-MuiDrawer-paper"
      tabindex="-1"
    >
      <nav
        class="MuiList-root MuiList-padding css-fv1two-MuiList-root"
        id="mainMenu"
        tabindex="-1"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-1rv48rz-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth MuiGrid-grid-xs-10 MuiGrid-grid-sm-12 css-1soofh4-MuiGrid-root"
          >
            <a
              class="noHover css-1oqhn84"
              data-analyticsid="main-menu-logo-link"
              data-testid="main-menu-logo-link"
              href="test"
              id="main-menu-logo-link"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
              title="test"
            >
              <div
                class="test"
                style="height: 50px; width: 160px; margin: 8px auto;"
              >
                test
              </div>
            </a>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-bt3e8x-MuiGrid-root"
          >
            <button
              aria-label="Close menu"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-hvz71z-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pg8mhl-MuiSvgIcon-root"
                data-testid="KeyboardArrowLeftIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
                />
              </svg>
            </button>
          </div>
        </div>
        <span
          class="menu-item-container"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-155c4xx-MuiButtonBase-root-MuiListItem-root"
            id="menu-item-0"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-df9giy-MuiListItemText-root"
              id="menu-itemText-0"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-17xnwrf-MuiTypography-root"
              >
                Primary text 0
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-yw73va-MuiTypography-root"
              >
                secondary text 0
              </p>
            </div>
          </div>
        </span>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
        />
        <span
          class="menu-item-container"
        >
          <div
            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-155c4xx-MuiButtonBase-root-MuiListItem-root"
            id="menu-item-2"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-df9giy-MuiListItemText-root"
              id="menu-itemText-2"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-17xnwrf-MuiTypography-root"
              >
                Primary text 1
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-yw73va-MuiTypography-root"
              >
                secondary text 1
              </p>
            </div>
          </div>
        </span>
      </nav>
      <div
        data-testid="after-menu-drawer"
        id="afterMenuDrawer"
        tabindex="-1"
      />
      <div
        class="MuiBox-root css-n5zwdn"
      >
        CRICOS Provider No: 
        <a
          class=" css-1oqhn84"
          data-analyticsid="cricos-link"
          data-testid="cricos-link"
          href="http://www.uq.edu.au/about/cricos-link"
          id="cricos-link"
          rel="noopener noreferrer"
          tabindex="0"
          target="_blank"
          title="CRICOS Provider No: "
        >
          00025B
        </a>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Component MenuDrawer should render opened drawer with menus, divider and skip nav button 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked css-wg9x4s-MuiDrawer-docked"
      id="menudrawer"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-12i7wg6-MuiPaper-root-MuiDrawer-paper"
      >
        <nav
          class="MuiList-root MuiList-padding css-fv1two-MuiList-root"
          id="mainMenu"
          tabindex="-1"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-wrap-xs-nowrap css-1rv48rz-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth MuiGrid-grid-xs-10 MuiGrid-grid-sm-12 css-1soofh4-MuiGrid-root"
            >
              <a
                class="noHover css-1oqhn84"
                data-analyticsid="main-menu-logo-link"
                data-testid="main-menu-logo-link"
                href="test"
                id="main-menu-logo-link"
                rel="noopener noreferrer"
                tabindex="0"
                target="_blank"
                title="test"
              >
                <div
                  class="test"
                  style="height: 50px; width: 160px; margin: 8px auto;"
                >
                  test
                </div>
              </a>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-bt3e8x-MuiGrid-root"
            >
              <button
                aria-label="Close menu"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-hvz71z-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pg8mhl-MuiSvgIcon-root"
                  data-testid="KeyboardArrowLeftIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="Skip navigation"
            class="css-16sk7k9"
            id="skipNav"
            tabindex="1"
            type="button"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium skipNavButton css-argx73-MuiButtonBase-root-MuiButton-root"
              tabindex="-1"
              type="button"
            >
              Skip navigation
            </button>
          </div>
          <span
            class="menu-item-container"
          >
            <div
              class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-155c4xx-MuiButtonBase-root-MuiListItem-root"
              id="menu-item-0"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root MuiListItemText-multiline css-df9giy-MuiListItemText-root"
                id="menu-itemText-0"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-17xnwrf-MuiTypography-root"
                >
                  Primary text 0
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-yw73va-MuiTypography-root"
                >
                  secondary text 0
                </p>
              </div>
            </div>
          </span>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
          />
          <span
            class="menu-item-container"
          >
            <div
              class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-button css-155c4xx-MuiButtonBase-root-MuiListItem-root"
              id="menu-item-2"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiListItemText-root MuiListItemText-multiline css-df9giy-MuiListItemText-root"
                id="menu-itemText-2"
              >
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-17xnwrf-MuiTypography-root"
                >
                  Primary text 1
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-yw73va-MuiTypography-root"
                >
                  secondary text 1
                </p>
              </div>
            </div>
          </span>
        </nav>
        <div
          data-testid="after-menu-drawer"
          id="afterMenuDrawer"
          tabindex="-1"
        />
        <div
          class="MuiBox-root css-n5zwdn"
        >
          CRICOS Provider No: 
          <a
            class=" css-1oqhn84"
            data-analyticsid="cricos-link"
            data-testid="cricos-link"
            href="http://www.uq.edu.au/about/cricos-link"
            id="cricos-link"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
            title="CRICOS Provider No: "
          >
            00025B
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;
